--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
 
             <div id="contact_forms">
-                <form action="#">
+                <form action="/mail/contact.php" method="post">
 
                     <div class="form-page1">
                         <ul>
