--- a/index.html
+++ b/index.html
@@ -255,11 +255,12 @@
 
 
             <div id="contact_forms">
-                <form action="/mail/contact.php" method="post">
+                <form method="POST" action="mail/contact.php" id="contact-form">
 
                     <div class="form-page1">
                         <ul>
                             <li> <input type="text" placeholder="Adınız:">
+                                
                             </li>
                             <li> <input type="text" placeholder="Soyadınız:">
                             </li>
