--- a/index.html
+++ b/index.html
@@ -259,18 +259,18 @@
 
                     <div class="form-page1">
                         <ul>
-                            <li> <input type="text" placeholder="Adınız:">
+                            <li> <input type="text" class="name" placeholder="Adınız:">
                                 
                             </li>
-                            <li> <input type="text" placeholder="Soyadınız:">
+                            <li> <input type="text" class="surname" placeholder="Soyadınız:">
                             </li>
                         </ul>
                     </div>
 
                     <div class="form-page2">
                         <ul>
-                            <li><input type="email" placeholder="Email:"></li>
-                            <li> <input type="tel" placeholder="Telefon:"></li>
+                            <li><input type="email" class="email" placeholder="Email:"></li>
+                            <li> <input type="tel" class="tel" placeholder="Telefon:"></li>
                         </ul>
 
 
@@ -278,7 +278,7 @@
 
                     <div class="form-page3">
                         <ul>
-                            <li><input type="text" placeholder="Mesaj"></li>
+                            <li><input type="text" class="message" placeholder="Mesaj"></li>
                         </ul>
                     </div>
 
