--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
 
             <div id="contact_forms">
-                <form method="post" action="mail/contact.php" id="contact-form">
+                <form action="#" id="contact-form">
 
                     <div class="form-page1">
                         <ul>
